cmake_minimum_required(VERSION 3.14)
project(leetcode_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode_cpp
        main.cpp
        n0005_longest_palindromic_substring.cpp
        n0042_trapping_rain_water.cpp
        n0138_copy_list_with_random_pointer.cpp
        n0200_number_of_islands.cpp
        )
