cmake_minimum_required(VERSION 3.14)
project(leetcode_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode_cpp
        main.cpp
        n0005_longest_palindromic_substring.cpp
        n0023_merge_k_sorted_lists.cpp
        n0033_search_in_rotated_sorted_array.cpp
        n0042_trapping_rain_water.cpp
        n0053_maximum_subarray.cpp
        n0138_copy_list_with_random_pointer.cpp
        n0151_reverse_words_in_a_string.cpp
        n0165_compare_version_numbers.cpp
        n0200_number_of_islands.cpp
        n0238_product_of_array_except_self.cpp
        n0297_serialize_and_deserialize_binary_tree.cpp
        n0315_count_of_smaller_numbers_after_self.cpp
        n0427_construct_quad_tree.cpp
        n0560_subarray_sum_equals_k.cpp
        n0621_task_scheduler.cpp
        n0973_k_closest_points_to_origin.cpp
        )
